--- a/projects.yaml
+++ b/projects.yaml
@@ -3,17 +3,19 @@ configuration:
   markdown_footer_file: "config/footer.md"
 
 categories:
-  # - category: "data-engineering"
-  #   title: "Machine Learning & Data Engineering"
-  #   subtitle: "Best-of lists about machine learning, data engieering, data science, or other topics related to big data."
+  - category: "miscellaneous"
+    title: "Miscellaneous"
+    subtitle: "If you can think of a more appropriate category for the items below, PRs welcome!"
+  - category: "package-managers"
+    title: "Package Managers"
 
 labels:
-  # - label: "python"
-  #   image: "https://www.python.org/static/favicon.ico"
-  #   description: "Best-of list with Python projects"
+  - label: "written-in-rust"
+    description: "Written in Rust"
+    image: "https://images.icon-icons.com/2699/PNG/512/rust_lang_logo_icon_169776.png"
 
 projects:
-  # - name: best-of-ml-python
-  #   github_id: ml-tooling/best-of-ml-python
-  #   labels: ["python"]
-  #   category: "data-engineering"
+  - name: uv
+    github_id: astral-sh/uv
+    labels: ["written-in-rust"]
+    category: "package-managers"
